Rights Modify background hero

--- a/SuaVoz/Views/Home/about.cshtml
+++ b/SuaVoz/Views/Home/about.cshtml
@@ -95,7 +95,7 @@
             </div>
             <!-- Card -->
             <div class="equipe__card">
-                <img src="~/img/rodrigo.png" class="equipe__card-img" />
+                <img src="~/img/rodrigo (1).png" class="equipe__card-img" />
                 <h4 class="equipe__card-title">Rodrigo Cunha</h4>
                 <p class="equipe__card-txt">Developer FullStack</p>
                 <div class="equipe__card-links">
