--- a/SuaVoz/wwwroot/css/about.css
+++ b/SuaVoz/wwwroot/css/about.css
@@ -1,6 +1,6 @@
 :root {
 	--color-title: #262626;
-	--color-title1: #fff;
+	--color-title-light: #fbf2c0;
 	--color-subtitle: #a62940;
 	--color-bg: #fbf2c0;
 	--color-footer: #bf8069;
@@ -22,6 +22,7 @@
 /* Hero Rights */
 .heroRights__container {
 	background: var(--color-preto);
+	background-image: url(../img/racismo22.png);
 }
 .heroRights__content {
 	display: flex;
@@ -30,6 +31,7 @@
 	align-items: center;
 	padding: 1rem 0;
 	min-height: 500px;
+	backdrop-filter: blur(5px);
 }
 
 .heroRights__content-img {
@@ -42,6 +44,13 @@
 	color: var(--color-bg);
 	max-width: 65%;
 	padding: 1rem;
+
+	font-weight: 600;
+}
+
+.heroRights__body-paragraph {
+	font-size: 1.2rem;
+	text-align: justify;
 }
 
 /* AboutContent */
