--- a/SuaVoz/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Login.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Log in";
-    Layout = "/Areas/Identity/Pages/_AuthLayout.cshtml";
+    Layout = "crud";
 }
 
 <div class="col-md-10 offset-md-1">
@@ -39,5 +39,5 @@
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
