--- a/SuaVoz/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,7 +2,7 @@
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
-    Layout = "/Areas/Identity/Pages/_AuthLayout.cshtml";
+    Layout = "crud";
 }
 
 
@@ -45,11 +45,12 @@
             </div>
         </div>
     </div>
-    <p>Para maiores informações acesse nossa <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de Privacidade</a> e nossos <a asp-area="" asp-controller="Home" asp-action="Termos">Termos de Uso</a>.</p>
+    <p>Para maiores informações acesse nossa <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de
+            Privacidade</a> e nossos <a asp-area="" asp-controller="Home" asp-action="Termos">Termos de Uso</a>.</p>
     <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
 </form>
 
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
