--- a/SuaVoz/Views/Denuncia/Delete.cshtml
+++ b/SuaVoz/Views/Denuncia/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/crud.cshtml";
 }
 
 <h1>Delete</h1>
