--- a/SuaVoz/Views/Denuncia/Edit.cshtml
+++ b/SuaVoz/Views/Denuncia/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/crud.cshtml";
 }
 
 <h1>Edit</h1>
@@ -61,5 +61,5 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
