--- a/SuaVoz/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Login.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Log in";
-    Layout = "crud";
+    Layout = "/Areas/Identity/Pages/_AuthLayout.cshtml";
 }
 
 <div class="col-md-10 offset-md-1">
