--- a/SuaVoz/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,7 +2,7 @@
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
-    Layout = "crud";
+    Layout = "/Areas/Identity/Pages/_AuthLayout.cshtml";
 }
 
 
@@ -47,7 +47,7 @@
     </div>
     <p>Para maiores informações acesse nossa <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de
             Privacidade</a> e nossos <a asp-area="" asp-controller="Home" asp-action="Termos">Termos de Uso</a>.</p>
-    <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+    <button type="submit" class="btn btn-block">Criar Conta</button>
 </form>
 
 
