--- a/SuaVoz/Views/Shared/crud.cshtml
+++ b/SuaVoz/Views/Shared/crud.cshtml
@@ -5,6 +5,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - SuaVoz</title>
+
+
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
@@ -20,10 +22,7 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<link rel="stylesheet" href="~/css/layout.css" />
-	<link rel="stylesheet" href="~/css/home.css" />
-	<link rel="stylesheet" href="~/css/about.css" />
-	<link rel="stylesheet" href="~/css/rights.css" />
-
+	<link rel="stylesheet" href="~/css/crud.css" />
 </head>
 
 <body>
@@ -51,19 +50,18 @@
 							<a class="nav-link" asp-controller="Home" asp-action="Rights"> <i
 									class="fa-solid fa-book-open-reader"></i> Seus Direitos </a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Denuncia" asp-action="Index">Denuncia</a>
-						</li>
 						<partial name="_LoginPartial.cshtml" />
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
-
 	<main role="main" class="main">
-		@RenderBody()
+		<div style="padding: 2rem;">
+			@RenderBody()
+		</div>
 	</main>
+
 	<!--==================== FOOTER ====================-->
 	<footer class="footer__container">
 		<div class="footer__content container">
@@ -94,9 +92,9 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
-
-	<script src="~/js/main.js"></script>
-	<script src="~/js/rights.js"></script>
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	@* <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
+	<script src="~/js/site.js" asp-append-version="true"></script>
 	@RenderSection("Scripts", required: false)
 </body>
 
