--- a/SuaVoz/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Login.cshtml
@@ -12,27 +12,27 @@
             <i class="fas fa-user-circle fa-9x text-secondary"></i>
         </div>
         <form id="account" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            @* <div asp-validation-summary="All" class="text-danger"></div> *@
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email" class="loginCadastro__label"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password">Senha</label>
+                <label asp-for="Input.Password" class="loginCadastro__label">Senha</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <div class="checkbox">
-                    <label asp-for="Input.RememberMe">
+                    <label asp-for="Input.RememberMe" class="loginCadastro__label">
                         <input asp-for="Input.RememberMe" />
                         @Html.DisplayNameFor(m => m.Input.RememberMe)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+                <button type="submit" class="btn btn-block loginCadastro__btn ">Entrar</button>
             </div>
         </form>
     </section>
