--- a/SuaVoz/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -8,7 +8,7 @@
 <partial name="_StatusMessage" for="StatusMessage" />
 <h4>@ViewData["Title"]</h4>
 <div>
-    <p>Para usar um app autenticador, siga as seguintes etapas:</p>
+    <p style="color: #fbf2c0">Para usar um app autenticador, siga as seguintes etapas:</p>
     <ol class="list">
         <li>
             <p>
@@ -16,19 +16,26 @@
                 <a href="https://go.microsoft.com/fwlink/?Linkid=825072">Android</a> e
                 <a href="https://go.microsoft.com/fwlink/?Linkid=825073">iOS</a> ou
                 Google Authenticator para
-                <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2&amp;hl=en">Android</a> e
+                <a
+                    href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2&amp;hl=en">Android</a>
+                e
                 <a href="https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8">iOS</a>.
             </p>
         </li>
         <li>
-            <p>Leia o QR Code ou insira esta chave <kbd>@Model.SharedKey</kbd> em seu aplicativo autenticador de dois fatores. Espaços e sinais não importam.</p>
-            <div class="alert alert-info">Clique no link para <a href="#">Gerar QR Code</a>.</div>
+            <p>Leia o QR Code ou insira esta chave <kbd style="color: #bf8069">@Model.SharedKey</kbd> em seu aplicativo
+                autenticador de dois
+                fatores. Espaços e sinais não importam.</p>
+            <div class="alert alert-warning">Clique no link para <a href="#"
+                    style="color: #262626; font-weight: 500;">Gerar QR Code</a>.
+            </div>
             <div id="qrCode"></div>
             <div id="qrCodeData" data-url="@Html.Raw(@Model.AuthenticatorUri)"></div>
         </li>
         <li>
             <p>
-                Depois de digitalizar o código QR ou inserir a chave acima, seu aplicativo de autenticação de dois fatores irá fornecer-lhe
+                Depois de digitalizar o código QR ou inserir a chave acima, seu aplicativo de autenticação de dois
+                fatores irá fornecer-lhe
                 com um código único. Digite o código na caixa de confirmação abaixo.
             </p>
             <div class="row">
@@ -49,5 +56,5 @@
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
