--- a/SuaVoz/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/SuaVoz/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -13,45 +13,46 @@
     {
         <div class="alert alert-danger">
             <strong>You have no recovery codes left.</strong>
-            <p>You must <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+            <p>You must <a asp-page="./GenerateRecoveryCodes">gerar um novo conjunto de códigos de recuperação</a> antes de
+                fazer login com um código de recuperação.</p>
         </div>
     }
     else if (Model.RecoveryCodesLeft == 1)
     {
         <div class="alert alert-danger">
-            <strong>You have 1 recovery code left.</strong>
-            <p>You can <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+            <strong>Você tem 1 código de recuperação restante.</strong>
+            <p>Você pode<a asp-page="./GenerateRecoveryCodes">gerar um novo conjunto de códigos de recuperação</a>.</p>
         </div>
     }
     else if (Model.RecoveryCodesLeft <= 3)
     {
         <div class="alert alert-warning">
-            <strong>You have @Model.RecoveryCodesLeft recovery codes left.</strong>
-            <p>You should <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+            <strong>Você tem @Model.RecoveryCodesLeft códigos de recuperação restantes.</strong>
+            <p>Você deve <a asp-page="./GenerateRecoveryCodes">gerar um novo conjunto de códigos de recuperação</a>.</p>
         </div>
     }
 
     if (Model.IsMachineRemembered)
     {
         <form method="post" style="display: inline-block">
-            <button type="submit" class="btn btn-default">Forget this browser</button>
+            <button type="submit" class="btn btn-default">Esqueça este navegador</button>
         </form>
     }
     <a asp-page="./Disable2fa" class="btn btn-default">Disable 2FA</a>
-    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
+    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">Redefinir códigos de recuperação</a>
 }
 
 <h5>App de Autenticação</h5>
 @if (!Model.HasAuthenticator)
 {
-<a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Adicionar App de autenticação</a>
+    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Adicionar App de autenticação</a>
 }
 else
 {
-<a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Configurar App de autenticação</a>
-<a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">Redefinir  App de autenticação</a>
+    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Configurar App de autenticação</a>
+    <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">Redefinir App de autenticação</a>
 }
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
