--- a/SuaVoz/Views/Shared/_LoginPartial.cshtml
+++ b/SuaVoz/Views/Shared/_LoginPartial.cshtml
@@ -8,13 +8,18 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
+        <a class="nav-link " asp-area="" asp-controller="Denuncia" asp-action="Index"><i class="fa-solid fa-bullhorn"></i>
+            Denuncia</a>
+    </li>
+    <li class="nav-item">
         <a id="manage" class="nav-link " asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Bem vindo
             @UserManager.GetUserName(User)! </a>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
         asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link">Sair</button>
+            <button id="logout" type="submit" class="nav-link login_btn" style="">Sair <i
+                class="fa-solid fa-right-from-bracket"></i></button>
         </form>
     </li>
 }
