--- a/SuaVoz/Views/Shared/crud.cshtml
+++ b/SuaVoz/Views/Shared/crud.cshtml
@@ -27,7 +27,7 @@
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-md navbar-dark fixed-top navbar__container">
+		<nav class="navbar navbar-expand-xl navbar-dark fixed-top navbar__container">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
 					<img src="~/img/suaVoz-maltesse.png" alt="" />
